# bevy_animations

./: Cargo.toml  README.md  animations.rs  plugins.rs  types.rs
book/: book.toml
book/src/: README.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  chapter_9.md
book/src/img/: README.md
example sprites/: README.md
src/: animations.rs  lib.rs  plugins.rs  types.rs
