[package]
name = "bevy_animations"
version = "0.2.3"
edition = "2021"
authors = ["aarongraybill3@gmail.com"]
description = "2d Game Animation Engine built for Bevy"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "bevy", "animations"]
homepage = "https://github.com/y0Phoenix/bevy_animations"
repository = "https://github.com/y0Phoenix/bevy_animations.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_animations_macros = "0.4.0"

[lib]
path = "src/lib.rs"
